snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.154613-2.jar.sha512
ea4136a4d4cabf7b94e14a21988e8dd829e7533e659482d809350237a3c0278aa503ed1c64b7bbbf03b43c9f6da941b4da4423691587f7eba782b406fd40f7d3